--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -368,8 +368,8 @@ body, #headerwarp {
 .doctor-cir {
   position: relative;
   margin: 0 auto;
-  width: 134px;
-  height: 134px;
+  width: 704px;
+  height: 483px;
 }
 
 .doctor-cir .inner {
@@ -377,9 +377,6 @@ body, #headerwarp {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.5);
-  border: 0px solid #fe5f03;
-  border-radius: 100%;
   z-index: 1;
   box-sizing: border-box;
 }
@@ -391,8 +388,8 @@ body, #headerwarp {
   bottom: 0;
   left: 0;
   margin: auto;
-  width: 49px;
-  height: 49px;
+  width: 528px;
+  height: 363px;
 }
 
 .item01 .doctor-cir .img {
@@ -423,34 +420,6 @@ body, #headerwarp {
   background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;
 }
 
-.doctor-txt {
-  margin-top: 30px;
-  text-align: center;
-}
-
-.doctor-txt .tit {
-  font-size: 22px;
-  line-height: 1.3;
-  font-weight: 600;
-  letter-spacing: -0.5px;
-  color: #3a3a3a;
-}
-
-.doctor-txt .num {
-  margin-top: 15px;
-  font-size: 42px;
-  letter-spacing: -0.25px;
-  color: #3a3a3a;
-}
-
-.doctor-txt .year {
-  margin-top: 10px;
-  font-size: 16.5px;
-  line-height: 1.3;
-  color: #3a3a3a;
-  opacity: 0;
-}
-
 .doctor-cir,
 .doctor-cir .inner,
 .doctor-cir .img,
@@ -470,8 +439,6 @@ body, #headerwarp {
 .slick-current .doctor-item .doctor-cir .inner {
   border-width: 0;
   box-shadow: none;
-  background: var(--primery);
-  background: radial-gradient(ellipse at center, var(--primery) 0%, #ff7a2c 38%, #f28b1e 95%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="var(--primery)", endColorstr="#f28b1e",GradientType=1 );
 }
 
@@ -481,31 +448,31 @@ body, #headerwarp {
 }
 
 .slick-current .doctor-item.item01 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/1.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/1.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item02 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/2.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/2.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item03 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/3.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/3.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item04 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/4.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/4.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item05 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/5.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/5.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item06 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/6.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/6.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item07 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/7.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/on/7.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
@@ -514,20 +481,6 @@ body, #headerwarp {
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(3) {
   animation-delay: 0.8s;
-}
-
-.slick-current .doctor-item .doctor-cir > span {
-  border: 1px solid rgb(239, 132, 37);
-  border-radius: 50%;
-  animation-fill-mode: both;
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  animation: nation-circle 1.8s infinite linear;
 }
 
 @keyframes nation-circle {
