--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -367,11 +367,10 @@ body, #headerwarp{
   .doctor-list{margin: 0 -10px;}
   .doctor-list .slick-list{overflow: visible;}
   .doctor-item{float: left; width: calc(20% - 20px); margin: 0 10px;}
-  .doctor-cir{position: relative; margin: 0 auto; width: 134px; height: 134px;}
+  .doctor-cir{position: relative; margin: 0 auto; width: 704px; height: 483px;}
   .doctor-cir .inner{position: absolute; width: 100%; height: 100%; background-color: #fff; 
-      box-shadow: 0 4px 4px 0px rgba(0,0,0,.5);
-      border: 0px solid #fe5f03; -webkit-border-radius: 100%; border-radius: 100%; z-index: 1; -webkit-box-sizing: border-box; box-sizing: border-box;}
-  .doctor-cir .img{position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; width: 49px; height: 49px;}
+      z-index: 1; -webkit-box-sizing: border-box; box-sizing: border-box;}
+  .doctor-cir .img{position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; width: 528px; height: 363px;}
   .item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;}
   .item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;}
   .item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;}
@@ -379,10 +378,7 @@ body, #headerwarp{
   .item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;}
   .item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;}
   .item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;}
-  .doctor-txt{margin-top: 30px; text-align: center;}
-  .doctor-txt .tit{font-size: 22px; line-height: 1.3; font-weight: 600; letter-spacing: -0.5px; color: #3a3a3a;}
-  .doctor-txt .num{margin-top: 15px; font-size: 42px; letter-spacing: -0.25px; color: #3a3a3a;}
-  .doctor-txt .year{margin-top: 10px; font-size: 16.5px; line-height: 1.3; color: #3a3a3a; opacity: 0;}
+
   
   .doctor-cir, 
   .doctor-cir .inner,
@@ -396,21 +392,18 @@ body, #headerwarp{
   .slick-current .doctor-item  .doctor-cir{margin-top: -53px; width: 226px; height: 226px;}
 .slick-current .doctor-item  .doctor-cir .inner{border-width: 0;
     box-shadow: none;
-background: var(--primery); 
-background: -moz-radial-gradient(center, ellipse cover,  var(--primery) 0%, #ff7a2c 38%, #f28b1e 95%);
-background: -webkit-radial-gradient(center, ellipse cover,  var(--primery) 0%,#ff7a2c 38%,#f28b1e 95%); 
-background: radial-gradient(ellipse at center,  var(--primery) 0%,#ff7a2c 38%,#f28b1e 95%); 
+
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primery)', endColorstr='#f28b1e',GradientType=1 ); 
 }
 .slick-current .doctor-item  .doctor-cir .img{width: 87px; height: 88px;}
  
-.slick-current .doctor-item.item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/1.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/2.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/3.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/4.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/5.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/6.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/7.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/1.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/2.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/3.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/4.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/5.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/6.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/7.svg") center/cover no-repeat;}
 
 
 .slick-current .doctor-item  .doctor-cir > span:nth-child(2) {
@@ -420,21 +413,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primery
 .slick-current .doctor-item  .doctor-cir > span:nth-child(3) {
 	-webkit-animation-delay: 0.8s;
 		animation-delay: 0.8s;
-}
-.slick-current .doctor-item  .doctor-cir > span {
-	border:1px solid rgba(239, 132, 37, 1) ;
-	border-radius: 50%;
-	-webkit-animation-fill-mode: both;
-			animation-fill-mode: both;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-	margin: 0;
-	width: 100%;
-	height: 100%;
-	-webkit-animation: nation-circle 1.8s infinite linear;
-	animation: nation-circle 1.8s infinite linear; 
 }
 
 @keyframes nation-circle {
