--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -448,31 +448,31 @@ body, #headerwarp {
 }
 
 .slick-current .doctor-item.item01 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/1.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/1.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item02 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/2.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/2.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item03 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/3.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/3.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item04 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/4.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/4.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item05 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/5.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/5.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item06 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/6.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/6.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item.item07 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/on/7.svg") center/cover no-repeat;
+  background: url("https://juhyun88.github.io/iweb_src/doctor/active/7.svg") center/cover no-repeat;
 }
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
